# zdppy_password_hash

./: README.md  pyproject.toml
examples/: 01hash加密和验证.py
zdppy_password_hash/: __init__.py  apache.py  apps.py  context.py  exc.py  hash.py  hosts.py  ifc.py  pwd.py  registry.py  totp.py  win32.py
zdppy_password_hash/_setup/: __init__.py  stamp.py
zdppy_password_hash/crypto/: __init__.py  _md4.py  des.py  digest.py
zdppy_password_hash/crypto/_blowfish/: __init__.py  _gen_files.py  (+2 more)
zdppy_password_hash/handlers/: __init__.py  argon2.py  bcrypt.py  cisco.py  des_crypt.py  digests.py  django.py  fshp.py  ldap_digests.py  md5_crypt.py  misc.py  mssql.py  mysql.py  oracle.py  pbkdf2.py  phpass.py  postgres.py  roundup.py  scram.py  scrypt.py  sha1_crypt.py  sha2_crypt.py  sun_md5_crypt.py  windows.py
zdppy_password_hash/tests/: __init__.py  _test_bad_register.py  backports.py  sample1.cfg  sample_config_1s.cfg  test_apache.py  test_apps.py  test_context.py  test_context_deprecated.py  test_crypto_builtin_md4.py  test_crypto_des.py  test_crypto_digest.py  test_crypto_scrypt.py  test_ext_django.py  test_ext_django_source.py  test_handlers.py  test_handlers_argon2.py  test_handlers_bcrypt.py  test_handlers_cisco.py  test_handlers_django.py  test_handlers_pbkdf2.py  test_handlers_scrypt.py  test_hosts.py  test_pwd.py  test_registry.py  test_totp.py  test_utils.py  test_utils_handlers.py  test_utils_md4.py  test_utils_pbkdf2.py  test_win32.py  tox_support.py  utils.py
zdppy_password_hash/utils/: __init__.py  binary.py  decor.py  des.py  handlers.py  md4.py  pbkdf2.py
(+9 files in other folders)
