[tool.poetry]
name = "zdppy_password_hash"
version = "0.1.0"
description = "实现常用的hash加密算法"
authors = ["zhangdapeng520 <1156956636@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
